Update some HTML.

--- a/src/templates/runs/callgraph.twig
+++ b/src/templates/runs/callgraph.twig
@@ -9,7 +9,7 @@
 
 <div class="btn-group pull-right">
     <a href="#" id="customize-graph" class="btn btn-default btn-small">
-        Gear
+        Change
     </a>
     <div class="popover left" id="metric-popover">
         <div class="arrow"></div>
@@ -24,7 +24,7 @@
                     <option value="ewt">Exclusive wall time</option>
                     <option value="ecpu">Exclusive CPU</option>
                     <option value="emu">Exclusive memory use</option>
-                    <option value="emu">Exclusive memory use</option>
+                    <option value="epmu">Exclusive peak memory use</option>
                 </select>
             </div>
             <div class="btn-group">
@@ -34,7 +34,7 @@
     </div>
 </div>
 
-<p class="alert alert-info clear">
+<p class="alert alert-info clear pull-left">
 Methods that represent 1% or less of the entire execution will be omitted
 from the callgraph result.</p>
 
