--- a/src/templates/runs/callgraph.twig
+++ b/src/templates/runs/callgraph.twig
@@ -7,41 +7,47 @@
 {% block content %}
 <h1>Callgraph for {{ profile.meta.url }} on {{ profile.meta('SERVER.REQUEST_TIME')|date(date_format) }}</h1>
 
-<div class="btn-group pull-right">
-    <a href="#" id="customize-graph" class="btn btn-default btn-small">
-        Change
-    </a>
-    <div class="popover left" id="metric-popover">
-        <div class="arrow"></div>
-        <div class="popover-content">
-            <h4>Metric</h4>
-            <div class="control-group">
-                <select name="metric">
-                    <option value="ct">Call count</option>
-                    <option value="wt" selected="selected">Wall time</option>
-                    <option value="cpu">CPU time</option>
-                    <option value="mu">Memory use</option>
-                    <option value="ewt">Exclusive wall time</option>
-                    <option value="ecpu">Exclusive CPU</option>
-                    <option value="emu">Exclusive memory use</option>
-                    <option value="epmu">Exclusive peak memory use</option>
-                </select>
-            </div>
-            <div class="btn-group">
-                <button class="btn btn-primary">Apply</button>
+<div class="row-fluid">
+    <div class="pull-right relative-box">
+        <a href="#" id="customize-graph" class="btn btn-default btn-small">
+            Refine
+        </a>
+        <div class="popover left" id="metric-popover">
+            <div class="arrow"></div>
+            <div class="popover-content">
+                <h4>Metric</h4>
+                <div class="control-group">
+                    <select name="metric">
+                        <option value="ct">Call count</option>
+                        <option value="wt" selected="selected">Wall time</option>
+                        <option value="cpu">CPU time</option>
+                        <option value="mu">Memory use</option>
+                        <option value="ewt">Exclusive wall time</option>
+                        <option value="ecpu">Exclusive CPU</option>
+                        <option value="emu">Exclusive memory use</option>
+                        <option value="epmu">Exclusive peak memory use</option>
+                    </select>
+                </div>
+                <div class="btn-group">
+                    <button class="btn btn-primary">Apply</button>
+                </div>
             </div>
         </div>
     </div>
+
+    <p class="alert alert-info pull-left">
+    Methods that represent 1% or less of the entire execution will be omitted
+    from the callgraph result.</p>
+
 </div>
 
-<p class="alert alert-info clear pull-left">
-Methods that represent 1% or less of the entire execution will be omitted
-from the callgraph result.</p>
 
-<div class="chart-container" id="callgraph-image"></div>
+<div class="row-fluid">
+    <div class="chart-container" id="callgraph-image"></div>
 
-<p>Due to the limitations in how xhprof collects data, callgraphs are not 100% reflective of
+    <p>Due to the limitations in how xhprof collects data, callgraphs are not 100% reflective of
 the actual method callgraph.</p>
+</div>
 {% endblock %}
 
 {% block jsfoot %}
@@ -55,6 +61,13 @@ $(document).ready(function () {
 
     gear.on('click', function(e) {
         popover.toggle();
+        var width = gear.outerWidth();
+        var height = popover.height();
+        var buttonPosition = gear.position();
+        popover.css({
+            right: width + 5,
+            top: 10 + (height / 2) * -1
+        });
         return false;
     });
 
