Show the correct units when displaying memory usage amounts.

--- a/src/templates/runs/callgraph.twig
+++ b/src/templates/runs/callgraph.twig
@@ -10,7 +10,7 @@
 <div class="row-fluid">
     <div class="pull-right relative-box">
         <a href="#" id="customize-graph" class="btn btn-default btn-small">
-            Refine
+            Update
         </a>
         <div class="popover left" id="metric-popover">
             <div class="arrow"></div>
