--- a/src/templates/runs/paginated-list.twig
+++ b/src/templates/runs/paginated-list.twig
@@ -43,7 +43,14 @@
                 </a>
             </td>
             {% endif %}
-            <td><a href="{{ url('url.view', {'url': result.meta.simple_url}) }}">{{ result.meta.url }}</a></td>
+            <td>
+                {% set addr = result.meta.url %}
+                <a {% if addr|length > 50 %}class="tip"{% endif %}
+                    title="{{ addr }}"
+                    href="{{ url('url.view', {'url': result.meta.simple_url}) }}">
+                    {{ addr|truncate(50) }}
+                </a>
+            </td>
             <td><a href="{{ url('run.view', {'id': result.id|trim }) }}">{{ result.date|date(date_format) }}</a></td>
             <td class="right">{{ result.get('main()', 'wt') |as_time }}</td>
             <td class="right">{{ result.get('main()', 'cpu') |as_time }}</td>
