--- a/src/templates/runs/symbol-view.twig
+++ b/src/templates/runs/symbol-view.twig
@@ -12,7 +12,7 @@
 </div>
 <div class="row-fluid">
     <h3>Current function</h3>
-    <table class="table">
+    <table class="table table-hover">
         <thead>
             <tr>
                 <th>Function</th>
@@ -47,6 +47,21 @@
             <td>{{ current.cpu|as_time }}</td>
             <td>{{ current.mu|as_bytes }}</td>
             <td>{{ current.pmu|as_bytes }}</td>
+        </tr>
+        <tr>
+            <td class="text">
+                Percent of total request.
+            </td>
+            <td>&mdash;</td>
+            <td>&mdash;</td>
+            <td>&mdash;</td>
+            <td>&mdash;</td>
+            <td>&mdash;</td>
+
+            <td>{{ (current.wt / main.wt)|as_percent }}</td>
+            <td>{{ (current.cpu / main.cpu)|as_percent }}</td>
+            <td>{{ (current.mu / main.mu)|as_percent }}</td>
+            <td>{{ (current.pmu / main.pmu)|as_percent }}</td>
         </tr>
         </tbody>
     </table>
