--- a/src/templates/runs/compare-details.twig
+++ b/src/templates/runs/compare-details.twig
@@ -67,10 +67,10 @@
         <tr>
             <th>Function</th>
             <th>Call Count</th>
-            <th>Exclusive Wall Time</th>
-            <th>Exclusive CPU</th>
-            <th>Exclusive Memory Usage</th>
-            <th>Exclusive Peak Memory Usage</th>
+            <th>Self Wall Time</th>
+            <th>Self CPU</th>
+            <th>Self Memory Usage</th>
+            <th>Self Peak Memory Usage</th>
             <th>Inclusive Wall Time</th>
             <th>Inclusive CPU</th>
             <th>Inclusive Memory Usage</th>
