Half working dotgraph done.
Still needs:

* Tests
* Sizes set on boxes.
* A place to output metric data.

--- a/src/templates/runs/callgraph-digraph.twig
+++ b/src/templates/runs/callgraph-digraph.twig
@@ -1,1 +1,5 @@
-{{ callgraph }}
+digraph {
+    {% for node in callgraph.nodes %}
+    "{{ node.parent }}" -> "{{ node.child }}" [label="{{ node.callCount }} call{% if node.callCount > 1 %}s{% endif %}"];
+    {% endfor %}
+}
