Add graphviz-esque based visualization for callgraphs
Table-flip the work I did in the past few commits and use dagre-d3 to
make a nice graphviz-esque visualization for the callgraph. This new UI
is missing a useful UI elements that will need polish. For example:

* Details on the current node are missing.
* It would be ideal to have symbol details (all metrics, child
  functions) for the currently focused node.

--- a/src/templates/runs/callgraph.twig
+++ b/src/templates/runs/callgraph.twig
@@ -57,7 +57,9 @@ the actual method callgraph.</p>
 {% endblock %}
 
 {% block jsfoot %}
-<script src="{{ static('js/callgraph.js') }}"></script>
+{# <script src="{{ static('js/callgraph.js') }}"></script> #}
+<script src="{{ static('js/dagre-d3.js') }}"></script>
+<script src="{{ static('js/callgraph-viz.js') }}"></script>
 <script>
 $(document).ready(function () {
     var gear = $('#customize-graph');
