Get basic panel looking.

--- a/src/templates/runs/callgraph.twig
+++ b/src/templates/runs/callgraph.twig
@@ -52,7 +52,7 @@
     <div class="chart-container" id="callgraph-image"></div>
 
     <div id="callgraph-details" style="display: none;">
-        <span class="button button-close pull-right">x</span>
+        <span class="button-close pull-right">&#10799;</span>
         <div class="details-content">
         </div>
     </div>
