Add drop shadow instead of border.

--- a/webroot/css/xhgui.css
+++ b/webroot/css/xhgui.css
@@ -312,8 +312,8 @@ tr .no-results {
     top: 0;
     left: 0;
     z-index: 100;
-    border: 1px solid #ccc;
     background: #fff;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.5);
 }
 .details-content {
     height: 100%;
