Make details tables sortable.

--- a/src/templates/runs/symbol-short.twig
+++ b/src/templates/runs/symbol-short.twig
@@ -44,7 +44,7 @@
     </table>
 
     <h3>Child functions</h3>
-    <table class="table table-hover">
+    <table class="table table-hover table-sort">
         <thead>
             <tr>
                 <th>Function</th>
