Make panel slide in  from the left when revealed.
Add some nice animation when the side panel is revealed.

--- a/src/templates/runs/callgraph.twig
+++ b/src/templates/runs/callgraph.twig
@@ -51,7 +51,7 @@
 <div class="row-fluid">
     <div class="chart-container" id="callgraph-image"></div>
 
-    <div id="callgraph-details" style="display: none;">
+    <div id="callgraph-details">
         <span class="button-close pull-right">&#10799;</span>
         <div class="details-content">
         </div>
