Almost have click scrolling of elements working.

--- a/src/templates/runs/symbol-short.twig
+++ b/src/templates/runs/symbol-short.twig
@@ -57,7 +57,7 @@
         <tbody>
         {% for child in children %}
         <tr>
-            <td class="text">
+            <td class="text child-symbol">
                 {{ helpers.tip_link(
                     child.function,
                     65,
