Add filtering to compare UI.

--- a/src/templates/runs/compare-details.twig
+++ b/src/templates/runs/compare-details.twig
@@ -60,9 +60,13 @@
 </table>
 
 
+<div class="pull-right form-search">
+  <input type="search" id="function-filter" placeholder="Filter by function name" />
+</div>
+
 <h3>Details</h3>
 
-<table class="table table-hover table-sort">
+<table class="table table-hover table-sort" id="filter-table">
     <thead>
         <tr>
             <th>Function</th>
