Fix busted output when function names contain \
Often functions will have a \ in them because of namespaces. ChunkFive
is missing \ :(

--- a/src/templates/runs/symbol-short.twig
+++ b/src/templates/runs/symbol-short.twig
@@ -1,7 +1,8 @@
 {% import 'macros/helpers.twig' as helpers %}
 
 <div class="row-fluid">
-    <h3>{{ symbol }} Details</h3>
+    <h3>Function Details</h3>
+    <h4 class="function-name">{{ symbol }}</h4>
     <table class="table table-hover">
         <tbody>
             <tr>
