--- a/src/templates/runs/symbol.twig
+++ b/src/templates/runs/symbol.twig
@@ -8,7 +8,8 @@
 {% block content %}
 <div class="row-fluid">
     <a class="back-link" href="{{ url('run.view', {'id': id}) }}">&laquo; Back to run</a>
-    <h1>Parent/child calls for {{ symbol }}</h1>
+    <h1>Function Details</h1>
+    <h3 class="function-name">{{ symbol }}</h3>
 </div>
 <div class="row-fluid">
     <h3>Current function</h3>
