--- a/webroot/css/xhgui.css
+++ b/webroot/css/xhgui.css
@@ -47,6 +47,10 @@ h1, h2, h3, h4, h5, h6,
     word-break: break-all;
 }
 
+.function-name {
+    font-family: Consolas, Menlo, Courier, monospace;
+}
+
 /**
  * Top Navbar
  */
@@ -326,7 +330,7 @@ tr .no-results {
 }
 .details-content {
     height: 100%;
-    padding: 10px;
+    padding: 0 10px 10px 10px;
     overflow-y: scroll;
 }
 .button-close {
