Rename callgraph js file.
Remove old callgraph and replace it with the new one.

--- a/src/templates/runs/callgraph.twig
+++ b/src/templates/runs/callgraph.twig
@@ -67,7 +67,7 @@ the actual method callgraph.</p>
 
 {% block jsfoot %}
 <script src="{{ static('js/dagre-d3.js') }}"></script>
-<script src="{{ static('js/callgraph-viz.js') }}"></script>
+<script src="{{ static('js/callgraph.js') }}"></script>
 <script>
 $(document).ready(function () {
     var loading = $('#loading');
